base/Ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my-nginx1
  namespace: zz
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.my.nginx.cn
    http:
      paths:
      - backend:
          service:
            name: svc-my-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: ingress.my.nginx.com
    http:
      paths:
      - backend:
          service:
            name: svc-my-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
